fix overlaping notification

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -159,7 +159,7 @@
     padding: 5px 10px;
     display: flex;
     flex-direction: column;
-    height: 30px;
+    min-height: 30px;
 
 
     &:nth-child(odd) {
